# cnc

./: CMakeLists.txt  Makefile  avr-gcc.cmake  avr.h  build.sh  burn.sh  cnc.h  firmware.c  gcode.h  main.c
avr/: cnc.c  cnc.h  config.h  eeprom.c  eeprom.h  gcode.c  gcode.h  uart.c  uart.h
